ingress-deploy-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-blue
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
          - name: httpblue
            mountPath: "/usr/share/nginx/html"
            readOnly: true
      nodeSelector:
        priority: high
      volumes:
        - name: httpblue
          configMap:
           name: httpblue
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-blue
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
