ingress-deploy-red.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-red
  labels:
    app: nginx-red
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-red
  template:
    metadata:
      labels:
        app: nginx-red
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.1
        ports:
        - containerPort: 80
        volumeMounts:
          - name: httpred
            mountPath: "/usr/share/nginx/html"
            readOnly: true
      volumes:
        - name: httpred
          configMap:
           name: httpred
---
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-red
spec:
  type: ClusterIP
  selector:
    app: nginx-red
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
